# silero_vad_jit

./: Cargo.toml  README.md
src/: lib.rs
